name:                tila
version:             0.1.0
description:         Please see README.md
synopsis:            The server for the TIL page
homepage:            https://github.com/theam/tila
license:             Apache-2.0
license-file:        LICENSE
author:              Theam
maintainer:          hackers@theam.io
copyright:           2018
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable tila
  main-is:             Main.hs
  build-depends:       base,
                       github,
                       magicbane,
                       servant-lucid,
                       lucid

  hs-source-dirs:      src
  other-modules:       Tila.App,
                       Tila.App.Home,
                       Tila.Prelude
  default-language:    Haskell2010
  default-extensions:  DeriveGeneric,
                       TypeOperators,
                       DataKinds,
                       TemplateHaskell,
                       ExtendedDefaultRules,
                       OverloadedStrings,
                       NoImplicitPrelude
  ghc-options:         -W -Werror
